load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "helloworld_compile_test",
    size = "medium",
    srcs = ["compile-test.sh"],
    args = [
        "$(location //src/workerd/server:workerd)",
        "$(location compile-test-config.capnp)",
        "$(location compile-helloworld-test.ok)",
    ],
    data = [
        "compile-helloworld-test.ok",
        "compile-test-config.capnp",
        "worker.js",
        "//src/workerd/server:workerd",
    ],
    tags = ["no-qemu"],
)
